fix z-index in nav and add some transitions

--- a/css/navigation.scss
+++ b/css/navigation.scss
@@ -45,7 +45,7 @@ header { top: 65px; }
     top: 23px;
     transform: translateX(-50%);
     width: 100px;
-    z-index: 9;
+    z-index: 10;
   }
 
   .primary-navigation {
@@ -78,6 +78,8 @@ header { top: 65px; }
     }
     .site-search { right: 60px; }
     .svg-text { display: inline; }
+
+    .nav-menu { margin: 0; }
   }
 }
 
@@ -114,7 +116,7 @@ header { top: 65px; }
   overflow: hidden;
   transition: max-height 0.3s;
   width: 100%;
-  z-index: 11;
+  z-index: 9;
 
   &.is-closed { max-height: 0; }
 
@@ -135,17 +137,18 @@ header { top: 65px; }
   list-style: none;
   margin: 0;
   overflow: hidden;
+  transition: all 0.6s;
   width: 100%;
 
   @include breakpoint(md) {
     flex-direction: row;
-    margin: auto;
+    margin: 0 10%;
     padding: 0;
     width: 80%;
   }
 
-  @include breakpoint(lg) { margin: auto; }
-  @include breakpoint(xl) { margin: 0; padding: 0 100px; }
+  @include breakpoint(lg) { margin: 0 10%; }
+  @include breakpoint(xl) { padding: 0 100px; }
 }
 
 .nav-menu > .menu-item {
@@ -261,12 +264,12 @@ header { top: 65px; }
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
-  right: 60px;
-  width: 100%;
-
   position: fixed;
+  right: 60px;
   top: 21px;
-  z-index: 9;
+  transition: all 0.6s;
+  width: 100%;
+  z-index: 10;
 
   form { margin: 0 5px; }
   #menu-secondary {
@@ -303,4 +306,7 @@ header { top: 65px; }
 
 .woocommerce-product-search.is-active {
   .search-field { width: 75%; }
+
+  @include breakpoint(md) { .search-field { width: 88%; } }
+  @include breakpoint(lg) { .search-field { width: 75%; } }
 }
