--- a/css/pages.scss
+++ b/css/pages.scss
@@ -65,7 +65,7 @@
   text-align: center;
   transition: opacity 0.3s;
   width: 300px;
-  z-index: 8;
+  z-index: 7;
 
   svg { width: 50px; }
 
